# mypackage

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
src/mypackage/: __about__.py  analysis.py  cleaned_data.csv  organize_data.py  plotting.py  simulations.py  titanic_new.csv  visualization.py
tests/: __init__.py
