[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
version = "1.0"
description = "This packet can be used to mainly analyse datasets (correlation, survival_rate etc.) and also visualize them accordingly. This packet especially used the `titanic` dataset offered by `seaborn`"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "can", email = "125025906+ccvnnn@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "matplotlib==3.10.1",
  "numpy==2.2.4",
  "pandas==2.2.3",
  "scipy==1.15.2",
  "seaborn==0.13.2"
]

[project.urls]
Documentation = "https://github.com/can/mypackage#readme"
Issues = "https://github.com/can/mypackage/issues"
Source = "https://github.com/can/mypackage"



[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mypackage tests}"

[tool.coverage.run]
source_pkgs = ["mypackage", "tests"]
branch = true
parallel = true
omit = [
  "src/mypackage/__about__.py",
]

[tool.coverage.paths]
mypackage = ["src/mypackage", "*/mypackage/src/mypackage"]
tests = ["tests", "*/mypackage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
